force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_CO_Group_Index_Refresh_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_CO_Group_Index_Refresh_Priority__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>CO Group Index Refresh Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>