force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_Drive_Impact_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Impact_Threshold__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Drive Impact Threshold (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>