force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_Enable_Manual_Refresh_Banner__c.field-meta.xml
<CustomField>
    <fullName>sked_Enable_Manual_Refresh_Banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Manual Refresh Banner</label>
    <type>Checkbox</type>
</CustomField>