force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_Max_TTI_Items_For_Periodic_Refresh__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_TTI_Items_For_Periodic_Refresh__c</fullName>
    <defaultValue>10000</defaultValue>
    <inlineHelpText>Max Number of Records that can be Queued by the Batch for the Quarterly Refresh every night. The value must not exceed 50000 records.</inlineHelpText>
    <label>Max TTI Items For Periodic Refresh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>