force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_Number_of_Parallel_Requests__c.field-meta.xml
<CustomField>
    <fullName>sked_Number_of_Parallel_Requests__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Number of Parallel Requests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>