force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>sked_Refresh_Interval__c</fullName>
    <defaultValue>180</defaultValue>
    <label>Refresh Interval (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>