force-app/main/default/objects/sked_Travel_Time_Manager__c/fields/sked_TTI_Refresh_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>sked_TTI_Refresh_Endpoint__c</fullName>
    <label>TTI Refresh Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>